# rust-monte-carlo

./: Cargo.toml  MENTOR_REQUIREMENTS.md  SPRINT1_PLAN.md  SPRINT2_PLAN.md  Week2_Assignment_MonteCarlo_EN.txt  build.rs
src/: config.rs  core_sim.rs  data_io.rs  gui.slint  main.rs  plotting.rs  porfolio.rs
