[package]
name = "monte_carlo"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.14.1"
csv = "1.4"
serde = "1.0.228"
rand = "0.9.2"
rand_distr = "0.5.1"
plotters = "0.3.7"
plotters-bitmap = "0.3.7"
chrono = "0.4.42"
image = "0.25.8"
rayon = "1.11"
anyhow = "1.0.100"
statrs = "0.18"
rfd = "0.15.4"
serde_json = "1.0"

[build-dependencies]
slint-build = "1.14.1"

